z-index fix

--- a/src/css/burgermenu.css
+++ b/src/css/burgermenu.css
@@ -43,7 +43,7 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    z-index: 10;
+    z-index: 999;
     width: 100vw;
     min-height: 100vh;
     height: fit-content;
